--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <div class="display">
             <p>127</p>
         </div>
+        <div class="keypad">
+            <button class="key"></button>
+            <button class="key"></button>
+            <button class="key"></button>
+            <button class="key"></button>
+            <button class="key"></button>
+            <button class="key"></button>
+            <button class="key"></button>
+            <button class="key"></button>       
+        </div>
     </div>
 </body>
-</html>
+</html> 
