--- a/index.html
+++ b/index.html
@@ -13,20 +13,30 @@
         <div class="display">
             <p>127</p>
         </div>
-        <div class="keypad">
-            <button class="key">7</button>
-            <button class="key">8</button>
-            <button class="key">9</button>
-            <button class="key"></button>
-            <button class="key">6</button>
-            <button class="key">5</button>
-            <button class="key">4</button>
-            <button class="key"></button>
-            <button class="key">1</button>
-            <button class="key">2</button>   
-            <button class="key">3</button>    
-            <button class="key"></button>            
+        <div class="keypadContainer">
+            <div class="keypad keypadleft">
+            <button class="key">CE</button>
+            <button class="key">/</button>
+            <button class="key">*</button>
+            <button class="key numKey">7</button>
+            <button class="key numKey">8</button>
+            <button class="key numKey">9</button>
+            <button class="key numKey">4</button>
+            <button class="key numKey">5</button>
+            <button class="key numKey">6</button>
+            <button class="key numKey">1</button>   
+            <button class="key numKey">2</button>
+            <button class="key numKey">3</button>
+            <button class="key numKey wideKey">0</button>  
+            <button class="key">.</button>          
         </div>
+        <div class="keypad keypadRight">
+            <button class="key">-</button>
+            <button class="key longKey plusKey">+</button>
+            <button class="key longKey enterKey">=</button>
+        </div>
+        </div>
+        
     </div>
 </body>
 </html> 
