refine UI and add element references

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <body>
     <div class="calculator">
         <div class="display">
-            <p>127</p>
+            
         </div>
         <div class="keypadContainer">
             <div class="keypad keypadleft">
-            <button class="key">CE</button>
-            <button class="key">/</button>
-            <button class="key">*</button>
-            <button class="key numKey">7</button>
-            <button class="key numKey">8</button>
-            <button class="key numKey">9</button>
-            <button class="key numKey">4</button>
-            <button class="key numKey">5</button>
-            <button class="key numKey">6</button>
-            <button class="key numKey">1</button>   
-            <button class="key numKey">2</button>
-            <button class="key numKey">3</button>
-            <button class="key numKey wideKey">0</button>  
-            <button class="key">.</button>          
+            <button class="key clearKey">CE</button>
+            <button class="key divideKey">/</button>
+            <button class="key multiplyKey">*</button>
+            <button class="key numKey sevenKey">7</button>
+            <button class="key numKey eightKey">8</button>
+            <button class="key numKey nineKey">9</button>
+            <button class="key numKey fourKey">4</button>
+            <button class="key numKey fiveKey">5</button>
+            <button class="key numKey sixKey">6</button>
+            <button class="key numKey oneKey">1</button>   
+            <button class="key numKey twoKey">2</button>
+            <button class="key numKey threeKey">3</button>
+            <button class="key numKey fourKey wideKey">0</button>  
+            <button class="key dotKey">.</button>          
         </div>
         <div class="keypad keypadRight">
-            <button class="key">-</button>
+            <button class="key minusKey">-</button>
             <button class="key longKey plusKey">+</button>
             <button class="key longKey enterKey">=</button>
         </div>
