initial input and operation execution, broken pushing to allow work on other systems

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         </div>
         <div class="keypadContainer">
             <div class="keypad keypadleft">
-            <button class="key clearKey">CE</button>
-            <button class="key divideKey">/</button>
-            <button class="key multiplyKey">*</button>
-            <button class="key numKey sevenKey">7</button>
-            <button class="key numKey eightKey">8</button>
-            <button class="key numKey nineKey">9</button>
-            <button class="key numKey fourKey">4</button>
-            <button class="key numKey fiveKey">5</button>
-            <button class="key numKey sixKey">6</button>
-            <button class="key numKey oneKey">1</button>   
-            <button class="key numKey twoKey">2</button>
-            <button class="key numKey threeKey">3</button>
-            <button class="key numKey fourKey wideKey">0</button>  
-            <button class="key dotKey">.</button>          
+            <button class="key" id="clearKey">CE</button>
+            <button class="key" id="divideKey">/</button>
+            <button class="key" id="multiplyKey">*</button>
+            <button class="key numKey" id="7">7</button>
+            <button class="key numKey" id="8">8</button>
+            <button class="key numKey" id="9">9</button>
+            <button class="key numKey" id="4">4</button>
+            <button class="key numKey" id="5">5</button>
+            <button class="key numKey" id="6">6</button>
+            <button class="key numKey" id="1">1</button>   
+            <button class="key numKey" id="2">2</button>
+            <button class="key numKey" id="3">3</button>
+            <button class="key numKey wideKey" id="4">0</button>  
+            <button class="key" id=".">.</button>          
         </div>
         <div class="keypad keypadRight">
-            <button class="key minusKey">-</button>
-            <button class="key longKey plusKey">+</button>
-            <button class="key longKey enterKey">=</button>
+            <button class="key" id="minusKey">-</button>
+            <button class="key longKey" id="plusKey">+</button>
+            <button class="key longKey", id="equalKey">=</button>
         </div>
         </div>
         
